--- a/vscode-workspaces/main/.devcontainer.json
+++ b/vscode-workspaces/main/.devcontainer.json
@@ -2,11 +2,11 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.154.0/containers/ubuntu
 {
     "name": "main",
-    "build": {
-        "dockerfile": "Dockerfile",
-        "args": { "VARIANT": "focal" }
-    },
-    // "image": "ahoenxk3/dev.main",
+    // "build": {
+    //     "dockerfile": "Dockerfile",
+    //     "args": { "VARIANT": "focal" }
+    // },
+    "image": "ahoenxk3/dev-main",
     "workspaceFolder": "/workspaces/repo-this",
 
     "settings": { 
