--- a/spaces/main/.devcontainer.json
+++ b/spaces/main/.devcontainer.json
@@ -2,18 +2,36 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.154.0/containers/ubuntu
 {
     "name": "main",
-    // "build": {
-    //     "dockerfile": "Dockerfile",
-    //     "args": { "VARIANT": "focal" }
-    // },
-    "image": "ahoenxk3/dev-main",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "args": { "VARIANT": "focal" }
+    },
+    // "image": "ahoenxk3/dev-main",
     "workspaceFolder": "/workspaces/repository-template",
 
     "settings": { 
-        "terminal.integrated.shell.linux": "/usr/bin/pwsh",
-        "terminal.integrated.shellArgs.linux": [
-            "-nol"
-        ],
+        "terminal.integrated.profiles.linux": {
+            "bash": {
+                "path": "bash",
+                "icon": "terminal-bash"
+            },
+            "zsh": {
+                "path": "zsh"
+            },
+            "fish": {
+                "path": "fish"
+            },
+            "tmux": {
+                "path": "tmux",
+                "icon": "terminal-tmux"
+            },
+            "pwsh": {
+                "path": "pwsh",
+                "icon": "terminal-powershell",
+                "args": ["-nol"]
+            }
+        },
+        "terminal.integrated.defaultProfile.linux": "pwsh",
         "omnisharp.autoStart": false
 
     },
