--- a/spaces/main/.devcontainer.json
+++ b/spaces/main/.devcontainer.json
@@ -53,17 +53,18 @@
 
     // Add the IDs of extensions you want installed when the container is created.
     "extensions": [
-        "alefragnani.bookmarks",
-        "eamodio.gitlens",
-        "metaseed.metago",
-        "mhutchie.git-graph",
-        "ms-azuretools.vscode-docker",
-        "ms-dotnettools.csharp",
-        "ms-kubernetes-tools.vscode-kubernetes-tools",
-        "ms-python.python",
-        "sleistner.vscode-fileutils",
-        "vscodevim.vim",
-    ],
+		"alefragnani.bookmarks",
+		"eamodio.gitlens",
+		"metaseed.metago",
+		"mhutchie.git-graph",
+		"ms-azuretools.vscode-docker",
+		"ms-dotnettools.csharp",
+		"ms-kubernetes-tools.vscode-kubernetes-tools",
+		"ms-python.python",
+		"sleistner.vscode-fileutils",
+		"vscodevim.vim",
+		"hoovercj.vscode-settings-cycler"
+	],
 
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
