--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "window.title": "${rootName}${separator}${profileName}"
+  "window.title": "${rootName}${separator}${profileName}",
+  "window.titleSeparator": " | ",
 }
