--- a/spaces/repo-template-main/.devcontainer/devcontainer.json
+++ b/spaces/repo-template-main/.devcontainer/devcontainer.json
@@ -18,6 +18,7 @@
     "vscode": {
       "settings": {
         "window.title": "${rootName}${separator}${profileName}",
+        "window.titleSeparator": " | ",
         "terminal.integrated.defaultProfile.linux": "pwsh",
         "terminal.integrated.profiles.linux": {
           "tmux": {
