--- a/.devcontainer/repo-template-main/devcontainer.json
+++ b/.devcontainer/repo-template-main/devcontainer.json
@@ -15,6 +15,7 @@
     "ghcr.io/ha07z7xe/devcontainers/devenv-main:latest"
   ],
   "postCreateCommand": "/usr/bin/pwsh -nop -nol -f /devcontainer/docker-context/postCreate.ps1",
+  "postAttachCommand": "/usr/bin/pwsh -nop -nol -f /devcontainer/docker-context/postAttach.ps1",
   "containerEnv": {},
   "customizations": {
     "vscode": {
