set workspace folder

--- a/.devcontainer/repo-template-main/devcontainer.json
+++ b/.devcontainer/repo-template-main/devcontainer.json
@@ -3,7 +3,7 @@
   "build": {
     "dockerfile": "./Dockerfile"
   },
-  "workspaceFolder": "/workspaces/repo-template",
+  "workspaceFolder": "/workspaces/",
   "runArgs": [
     "--network=host",
     // "--cap-add=NET_RAW",
