--- a/.devcontainer/main-devcontainer/devcontainer.json
+++ b/.devcontainer/main-devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
-  "name": "main",
+  "name": "main-devcontainer",
   "build": {
     "dockerfile": "./Dockerfile"
   },
   "runArgs": [
-    "--network=host",
+    "--network=host"
     // "--cap-add=NET_RAW",
     // "--cap-add=NET_ADMIN"
   ],
@@ -47,7 +47,6 @@
   "mounts": [
     // "source=${localEnv:HOME}/.aws,target=/root/.aws,type=bind,consistency=cached",
     // "source=${localEnv:HOME}/.kube,target=/root/.kube,type=bind,consistency=cached",
-    // "source=${localWorkspaceFolder}/../../,target=/workspaces/repo-this,type=bind",
     // "source=${localWorkspaceFolder}/../../../repo-other,target=/workspaces/repo-other,type=bind",
   ]
 }
