--- a/.devcontainer/main-devcontainer/devcontainer.json
+++ b/.devcontainer/main-devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
   "initializeCommand": [
     "docker",
     "pull",
-    "ghcr.io/ha07z7xe/devcontainers/devenv-main-amd64:latest"
+    "ghcr.io/whiterabbit7516/devcontainers/devenv-main-amd64:latest"
   ],
   "postCreateCommand": "/usr/bin/pwsh -nop -nol -f /devcontainer/docker-context/scripts/postCreate.ps1",
   "postAttachCommand": "/usr/bin/pwsh -nop -nol -f /devcontainer/docker-context/scripts/postAttach.ps1",
@@ -39,7 +39,7 @@
           }
         },
         "omnisharp.autoStart": false,
-        "dotfiles.repository": "https://github.com/ha07z7xe/dotfiles.git",
+        "dotfiles.repository": "https://github.com/whiterabbit7516/dotfiles.git",
         "dotfiles.installCommand": "install.ps1"
       },
       "extensions": [
