--- a/.devcontainer/main/Dockerfile
+++ b/.devcontainer/main/Dockerfile
@@ -1,8 +1,4 @@
 FROM ghcr.io/whiterabbit7516/devcontainers/devenv-main-amd64:latest
-
-WORKDIR /devcontainer/docker-build-workdir/
-
-WORKDIR /devcontainer/docker-context
+WORKDIR /devcontainer/build/
 COPY /scripts/* ./scripts/
-
 WORKDIR /
